--- a/sleepapneaanalysis2022.ipynb
+++ b/sleepapneaanalysis2022.ipynb
@@ -415,76 +415,76 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>QH3</td>\n",
-       "      <td>56</td>\n",
-       "      <td>AA</td>\n",
+       "      <th>177</th>\n",
+       "      <td>XT2</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Cauc</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>N</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>HS</td>\n",
+       "      <td>P</td>\n",
+       "      <td>N</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>92.4</td>\n",
+       "      <td>18.3</td>\n",
+       "      <td>10.54</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>5.72</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>89</th>\n",
+       "      <td>MT</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Cauc</td>\n",
        "      <td>Middle</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>32.4</td>\n",
-       "      <td>Y</td>\n",
+       "      <td>N</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>N</td>\n",
        "      <td>UG</td>\n",
        "      <td>P</td>\n",
        "      <td>N</td>\n",
        "      <td>...</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>86.9</td>\n",
-       "      <td>17.8</td>\n",
-       "      <td>25.53</td>\n",
-       "      <td>0.94</td>\n",
-       "      <td>3.54</td>\n",
-       "      <td>33.5</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>107</th>\n",
-       "      <td>OO</td>\n",
-       "      <td>27</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>27.0</td>\n",
        "      <td>N</td>\n",
-       "      <td>HS</td>\n",
-       "      <td>P</td>\n",
-       "      <td>N</td>\n",
-       "      <td>...</td>\n",
-       "      <td>N</td>\n",
-       "      <td>85.1</td>\n",
-       "      <td>18.8</td>\n",
-       "      <td>26.08</td>\n",
-       "      <td>0.76</td>\n",
-       "      <td>4.08</td>\n",
-       "      <td>49.5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>137</th>\n",
-       "      <td>ST</td>\n",
-       "      <td>57</td>\n",
-       "      <td>AA</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>Y</td>\n",
-       "      <td>28.4</td>\n",
-       "      <td>N</td>\n",
-       "      <td>HS</td>\n",
-       "      <td>P</td>\n",
-       "      <td>N</td>\n",
-       "      <td>...</td>\n",
-       "      <td>N</td>\n",
-       "      <td>87.7</td>\n",
-       "      <td>23.3</td>\n",
-       "      <td>37.35</td>\n",
+       "      <td>90.5</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>12.07</td>\n",
        "      <td>0.87</td>\n",
-       "      <td>3.26</td>\n",
-       "      <td>70.3</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>21.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>GA</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Cauc</td>\n",
+       "      <td>Middle</td>\n",
+       "      <td>N</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>Y</td>\n",
+       "      <td>HS</td>\n",
+       "      <td>F</td>\n",
+       "      <td>N</td>\n",
+       "      <td>...</td>\n",
+       "      <td>N</td>\n",
+       "      <td>87.3</td>\n",
+       "      <td>13.3</td>\n",
+       "      <td>13.55</td>\n",
+       "      <td>0.91</td>\n",
+       "      <td>4.51</td>\n",
+       "      <td>9.1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -492,65 +492,65 @@
        "</div>"
       ],
       "text/plain": [
-       "    Participant Coded  Age(Yrs) Race Socio-Economic Status  \\\n",
-       "117               QH3        56   AA                Middle   \n",
-       "107                OO        27   AA                   Low   \n",
-       "137                ST        57   AA                   Low   \n",
+       "    Participant Coded  Age(Yrs)  Race Socio-Economic Status  \\\n",
+       "177               XT2        20  Cauc                   Low   \n",
+       "89                 MT        32  Cauc                Middle   \n",
+       "30                 GA        32  Cauc                Middle   \n",
        "\n",
        "    Presence of OSA associated gene-Serotonin receptor encoding gene (HTR2A)  \\\n",
-       "117                                                  Y                         \n",
-       "107                                                  Y                         \n",
-       "137                                                  Y                         \n",
+       "177                                                  N                         \n",
+       "89                                                   N                         \n",
+       "30                                                   N                         \n",
        "\n",
        "      BMI Obesity Education Type of Meals Diabetic  ... Hypertension  \\\n",
-       "117  32.4       Y        UG             P        N  ...            Y   \n",
-       "107  27.0       N        HS             P        N  ...            N   \n",
-       "137  28.4       N        HS             P        N  ...            N   \n",
+       "177  23.0       N        HS             P        N  ...            N   \n",
+       "89   26.4       N        UG             P        N  ...            N   \n",
+       "30   39.0       Y        HS             F        N  ...            N   \n",
        "\n",
        "     Lowest Oxygen Desaturation(%) -hypoxic burden/stress  \\\n",
-       "117                                               86.9      \n",
-       "107                                               85.1      \n",
-       "137                                               87.7      \n",
+       "177                                               92.4      \n",
+       "89                                                90.5      \n",
+       "30                                                87.3      \n",
        "\n",
        "    Average Apnea Duration(seconds)- sleep apnea architecture  \\\n",
-       "117                                               17.8          \n",
-       "107                                               18.8          \n",
-       "137                                               23.3          \n",
+       "177                                               18.3          \n",
+       "89                                                14.7          \n",
+       "30                                                13.3          \n",
        "\n",
        "     Arousal Index(Number of Arousals/Hour)- sleep fragmentation  \\\n",
-       "117                                              25.53             \n",
-       "107                                              26.08             \n",
-       "137                                              37.35             \n",
+       "177                                              10.54             \n",
+       "89                                               12.07             \n",
+       "30                                               13.55             \n",
        "\n",
        "     % NREM Sleep-Sleep Quality  \\\n",
-       "117                        0.94   \n",
-       "107                        0.76   \n",
-       "137                        0.87   \n",
+       "177                        0.92   \n",
+       "89                         0.87   \n",
+       "30                         0.91   \n",
        "\n",
        "    Average CPAP use(hours/night) -CPAP compliance/adherance  \\\n",
-       "117                                               3.54         \n",
-       "107                                               4.08         \n",
-       "137                                               3.26         \n",
+       "177                                               5.72         \n",
+       "89                                                6.50         \n",
+       "30                                                4.51         \n",
        "\n",
        "     Apnea Hypopnea Index AHI-After 12 weeks of CPAP Use  \\\n",
-       "117                                               33.5     \n",
-       "107                                               49.5     \n",
-       "137                                               70.3     \n",
+       "177                                               13.3     \n",
+       "89                                                21.6     \n",
+       "30                                                 9.1     \n",
        "\n",
        "     Reduction in Snoring-After 12 weeks of CPAP Use  \\\n",
-       "117                                                1   \n",
-       "107                                                2   \n",
-       "137                                                2   \n",
+       "177                                                5   \n",
+       "89                                                 5   \n",
+       "30                                                 5   \n",
        "\n",
        "     Reduction in Tiredness-After 12 weeks of CPAP Use  \\\n",
-       "117                                                  1   \n",
-       "107                                                  2   \n",
-       "137                                                  1   \n",
+       "177                                                  3   \n",
+       "89                                                   4   \n",
+       "30                                                   3   \n",
        "\n",
        "     Reduction in Daytime Sleepiness-After 12 weeks of CPAP Use  \n",
-       "117                                                  2           \n",
-       "107                                                  1           \n",
-       "137                                                  1           \n",
+       "177                                                  5           \n",
+       "89                                                   4           \n",
+       "30                                                   5           \n",
        "\n",
        "[3 rows x 25 columns]"
       ]
@@ -3955,7 +3955,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> Finally the Above sets of Histograms show that among the two Race groups participants, Caucasians had better responses than the participants of AA group, for all the syptoms of Sleep Apnea. Which again can be directly related to the number of hours/night use of CPAP device among the two groups. The histograms clearly show that Cauc group participants had higher values than the AA group, since their reponses on the Likert Scale were always higher for Post 12 weeks CPAP use review. This could help us clearly answer the question, that OSA could be cured or at the least controlled by longer use of CPAP device."
+    "> Finally the Above sets of Histograms show that among the two Race groups participants, Caucasians had better responses than the participants of AA group, for all the syptoms of Sleep Apnea. Which again can be directly related to the number of hours/night use of CPAP device among the two groups. The histograms clearly show that Cauc group participants had higher values than the AA group, since their reponses on the Likert Scale were always higher for feeling better Post 12 weeks CPAP use review. This could help us clearly answer the question, that OSA could be cured or at the least controlled by longer use of CPAP device."
    ]
   },
   {
